--- a/TagsCloudContainer.Tests/TagsCloudContainer.Tests.csproj
+++ b/TagsCloudContainer.Tests/TagsCloudContainer.Tests.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
         <PackageReference Include="FakeItEasy" Version="8.3.0" />
         <PackageReference Include="FluentAssertions" Version="7.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
@@ -25,10 +26,6 @@
     <ItemGroup>
       <ProjectReference Include="..\TagsCloudContainer.TagsCloudVisualization\TagsCloudContainer.TagsCloudVisualization.csproj" />
       <ProjectReference Include="..\TagsCloudContainer.TextAnalyzer\TagsCloudContainer.TextAnalyzer.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="TextAnalyzerTests\" />
     </ItemGroup>
 
 </Project>
