Update. Проект "TextAnalyzer" переведен с Autofac на Microsoft Dependency Injection

--- a/TagsCloudContainer.TextAnalyzer/TagsCloudContainer.TextAnalyzer.csproj
+++ b/TagsCloudContainer.TextAnalyzer/TagsCloudContainer.TextAnalyzer.csproj
@@ -7,16 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Autofac" Version="8.1.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
       <PackageReference Include="MyStemWrapper" Version="1.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Update="appsettings.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
     </ItemGroup>
     <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
@@ -25,5 +17,10 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Logic\" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Update="Resources\mystem.exe">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 </Project>
