--- a/TagsCloudContainer.TagsCloudVisualization/TagsCloudContainer.TagsCloudVisualization.csproj
+++ b/TagsCloudContainer.TagsCloudVisualization/TagsCloudContainer.TagsCloudVisualization.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Autofac" Version="8.1.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
       <PackageReference Include="System.Drawing.Common" Version="8.0.11" />
     </ItemGroup>
     <ItemGroup>
