Update. Переделана регистрация в di сервисов из библиотек

--- a/TagsCloudContainer.ConsoleUi/TagsCloudContainer.ConsoleUi.csproj
+++ b/TagsCloudContainer.ConsoleUi/TagsCloudContainer.ConsoleUi.csproj
@@ -9,9 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="8.1.1" />
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
     </ItemGroup>
 
     <ItemGroup>
