--- a/TagsCloudContainer.ConsoleUi/TagsCloudContainer.ConsoleUi.csproj
+++ b/TagsCloudContainer.ConsoleUi/TagsCloudContainer.ConsoleUi.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -11,6 +11,7 @@
       <PackageReference Include="Autofac" Version="8.1.1" />
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
+      <PackageReference Include="System.Drawing.Common" Version="8.0.11" />
     </ItemGroup>
 
     <ItemGroup>
