--- a/TagsCloudContainer.TagsCloudVisualization/TagsCloudContainer.TagsCloudVisualization.csproj
+++ b/TagsCloudContainer.TagsCloudVisualization/TagsCloudContainer.TagsCloudVisualization.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net8.0-windows</TargetFramework>
+        <PlatformName>windows</PlatformName>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
