--- a/TagsCloudContainer.Tests/TagsCloudContainer.Tests.csproj
+++ b/TagsCloudContainer.Tests/TagsCloudContainer.Tests.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\TagsCloudContainer.ConsoleUi\TagsCloudContainer.ConsoleUi.csproj" />
       <ProjectReference Include="..\TagsCloudContainer.TagsCloudVisualization\TagsCloudContainer.TagsCloudVisualization.csproj" />
       <ProjectReference Include="..\TagsCloudContainer.TextAnalyzer\TagsCloudContainer.TextAnalyzer.csproj" />
     </ItemGroup>
@@ -29,6 +30,51 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Client\TestData\test.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Client\TestData\result.jpeg">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Client\TestData\result.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Client\TestData\resultImageSettings.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Client\TestData\resultRedBlue.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Client\TestData\resultS.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Client\TestData\resultVSA.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="ConsoleUiTests\TestData\result.jpeg">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="ConsoleUiTests\TestData\result.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="ConsoleUiTests\TestData\resultImageSettings.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="ConsoleUiTests\TestData\resultRedBlue.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="ConsoleUiTests\TestData\resultS.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="ConsoleUiTests\TestData\resultVSA.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="ConsoleUiTests\TestData\test.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
